@@ -1,4 +1,5 @@
 # Tutorial Part‑3 — Combine DSL with imperative nodes
+---
 
 In this tutorial you will:
 
@@ -6,26 +7,35 @@ In this tutorial you will:
 - Use lifecycle callbacks to initialize and clean up state.
 - Route events through the DSL into your component and emit results.
 
-Prerequisites
+Source reference in examples repository: [TutorialPart3]({{fluxtion_example_src}}/getting-started/src/main/java/com/telamin/fluxtion/example/tutorial/TutorialPart4.java)
+
+## Prerequisites
 
 - JDK 21+
 - JBang or Maven
 
-About imperative nodes in Fluxtion
+## About imperative nodes in Fluxtion
 
 - The runtime can invoke user components directly as part of the graph.
 - You expose methods for inputs and outputs; Fluxtion wires calls based on dependencies.
 - Lifecycle callbacks (such as onStart/onStop) let your component initialize or reset state.
 
-Option A — Run with JBang
+## Option A — Run with JBang
 
 1) Create a file TutorialPart3.java with the code below.
-2) Run: jbang TutorialPart3.java
+
+```console
+vi TutorialPart3.java
+```
+2. Run with jBang
+
+```console 
+jbang TutorialPart3.java 
+```
 
 ```java
-//DEPS com.telamin.fluxtion:fluxtion-builder:0.9.4
-//COMPILE_OPTIONS -proc:full
-//JAVA 21
+//DEPS com.telamin.fluxtion:fluxtion-builder:{{fluxtion_version}}
+//JAVA 25
 
 import com.telamin.fluxtion.builder.DataFlowBuilder;
 import com.telamin.fluxtion.runtime.DataFlow;
@@ -89,10 +99,10 @@ public class TutorialPart3 {
 
         DataFlow flow = DataFlowBuilder
                 .subscribe(SensorReading.class)
-                .filter(r -> r.value() >= 0)         // basic guard
+                .filter(r -> r.value() >= 0)     // basic guard
                 .peek(r -> System.out.println("reading=" + r))
-                .push(device::onReading)         // feed imperative node
-                .mapFromSupplier(device::status) // access value from imperative node
+                .push(device::onReading)         // feed user node
+                .mapFromSupplier(device::status) // access value from user node
                 .sink("deviceStatus")
                 .build();
 
@@ -111,24 +121,39 @@ public class TutorialPart3 {
 }
 ```
 
-Option B — Maven
+## Option B — Maven
 
 - Add the dependency (see Part‑1), create the class, and run it from your IDE.
 
-What you should see
+## What you should see
 
 - onStart prints once as the graph becomes active.
 - Device status lines containing last value and running average.
 - Inputs with negative values are filtered out by the DSL before reaching the component.
 
-Key ideas reinforced
+```console
+fluxtion-exmples % jbang TutorialPart3.java 
+[jbang] Building jar for TutorialPart3.java...
+Building DataFlow: DSL + imperative DeviceState
+[DeviceState] onStart 2025-09-27T08:40:28.626489Z
+Publishing sensor readings every 250 ms...
+
+reading=SensorReading[deviceId=dev-1, value=21.429319588260345]
+device=dev-1, last=21.429319588260345, avg=21.43
+reading=SensorReading[deviceId=dev-1, value=20.630519222967056]
+device=dev-1, last=20.630519222967056, avg=21.03
+reading=SensorReading[deviceId=dev-1, value=24.67064434358356]
+device=dev-1, last=24.67064434358356, avg=22.24
+reading=SensorReading[deviceId=dev-1, value=23.083275479199557]
+device=dev-1, last=23.083275479199557, avg=22.45
+```
+
+## Key ideas reinforced
 
 - Imperative nodes can hold state and expose methods; the DSL can call into them.
 - Lifecycle callbacks provide clean initialization/shutdown hooks.
 - You can mix declarative operators (filter/map) with direct calls to your own classes.
 
-Next steps
+## Next steps
 
 - Proceed to Part‑4 to package and embed a DataFlow in a microservice with logging, health, and metrics hooks.
-
-```
